# bgsclient

./: CMakeLists.txt  README.md
src/: IMBSBuilder.cpp  IMBSBuilder.h  Main.cpp  T2FGMM.h  T2FGMM_Main.cpp  T2FGMM_UMBuilder.cpp  T2FGMM_UMBuilder.h  T2FMRF.h  T2FMRF_Main.cpp  T2FMRF_UMBuilder.cpp  T2FMRF_UMBuilder.h  run_client.sh  run_imbs.sh  run_pmbgs.sh
